src/objects/Position__c.object
<CustomObject>
    <description>This object stores information
about the open job positions at our company.</description>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISBLANK( Closed_Date__c ) , 
          TODAY()- Closed_Date__c   ,  Closed_Date__c - TODAY() )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional__c</fullName>
        <label>Functional</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hired_By__c</fullName>
        <defaultValue>TODAY() +90</defaultValue>
        <label>Hired By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>Job Description</description>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>• San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>• Austin, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>• Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Close Date must be specified
when Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not
Approved.</description>
        <errorConditionFormula>ISBLANK( Closed_Date__c ) &amp;&amp;
(ISPICKVAL(Status__c , &quot;Closed - Filled&quot;) ||
ISPICKVAL(Status__c , &quot;Closed - Not Approved&quot;))</errorConditionFormula>
        <errorDisplayField>Closed_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified
when Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max
Pay.</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorMessage>Min Pay cannot exceed Max Pay.</errorMessage>
    </validationRules>
</CustomObject>